initi FX_DB_IMAGE